# optimalcontrol

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  plan.md  pyproject.toml
benchmarks/: bench_ensemble.py  bench_expm.py  bench_grape_hotpath.py
dev/: implement.md  implement_kor.md
docs/: equations.md  guide_ensembles_penalties.md  guide_grape.md  guide_operators.md  guide_paper_figures.md  guide_rope_crop.md  guide_spin_system.md  guide_states.md  source_notes.md  spinach_mapping.md  user_manual.md
examples/: compare_3919_reburp_myprofile.py  crop_efficiency_vs_ka.py  crop_lossless_limit.py  crop_regression_params.py  crop_truncated_waveform.py  grape_broadband_180.py  hmqc_oc_180_artifact.py  inept_hardI_broadbandS6k.py  jmr2005_fig5_rope.py  methyl_pc9_sideband_180.py  methyl_water_binary_symmetric_180.py  methyl_water_reburp_180.py  methyl_water_reburp_minlength_180.py  methyl_water_reburp_minpower_180.py  phase_only_iy_inversion_10khz.py  reburp_pulse.py  rope_efficiency_vs_n.py  rope_finite_time_controls.py  rope_finite_time_efficiency.py  rope_gain_Ia_2IbSc.py  rope_hard_pulse.py  rope_inphase_gain.py  rope_sodium_formate.py  sciadv2023_fig1_ur180.py
examples/expected/: crop_efficiency_vs_ka.npz  crop_lossless_limit.npz  crop_regression_params.npz  crop_truncated_waveform.npz  grape_broadband_180.npz  hmqc_oc_180_artifact.npz  jmr2005_fig5_rope.npz  methyl_water_binary_symmetric_180.npz  methyl_water_binary_symmetric_180_duration_search.csv  methyl_water_reburp_180.npz  methyl_water_reburp_minlength_180.npz  methyl_water_reburp_minpower_180.npz  phase_only_iy_inversion_10khz.npz  reburp_pulse.npz  rope_efficiency_vs_n.npz  rope_finite_time_controls.npz  rope_finite_time_efficiency.npz  rope_gain_Ia_2IbSc.npz  rope_hard_pulse.npz  rope_inphase_gain.npz  rope_sodium_formate.npz
examples/output/: grape_broadband_180.shape  hmqc_oc_180_artifact.shape  inept_hardI_broadbandS6k.shape  jmr2005_fig5_rope.shape  methyl_water_binary_symmetric_180.shape  methyl_water_reburp_180.shape  methyl_water_reburp_minlength_180.shape  methyl_water_reburp_minpower_180.shape  phase_only_iy_inversion_10khz.shape  sciadv2023_fig1_ur180.shape
optimalcontrol/: __init__.py  _accelerator.py  _seedless_kernel.py  _types.py  _validation.py  analysis.py  bloch.py  crop.py  distortions.py  ensemble.py  grape.py  io.py  ocseed.py  operators.py  optimizers.py  penalties.py  plotting.py  rope.py  spin_system.py  states.py
scripts/ralph/: prd.json  progress.txt  ralph_codex.sh
src/: lib.rs
tasks/: prd-optimalcontrol.md
tests/: test_analysis.py  test_bloch.py  test_crop.py  test_ensemble.py  test_examples.py  test_fidelity.py  test_grape.py  test_imports.py  test_integration.py  test_io.py  test_liouville.py  test_methyl_pc9_sideband.py  test_methyl_water_pulse.py  test_methyl_water_reburp.py  test_methyl_water_reburp_minlength.py  test_methyl_water_reburp_minpower.py  test_ocseed.py  test_operators.py  test_optimizers.py  test_penalties.py  test_plotting.py  test_rope.py  test_rust_accelerator.py  test_spin_system.py  test_states.py  test_validation.py
