[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "optimalcontrol"
version = "0.3.0"
description = "Python optimal control package for NMR spin dynamics (ROPE, CROP, GRAPE)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "matplotlib",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.maturin]
module-name = "optimalcontrol._rust"
python-source = "."
features = ["pyo3/extension-module"]
exclude = [
    { path = "examples/output/**/*", format = "sdist" },
    { path = "implement*.md", format = "sdist" },
    { path = "optimalcontrol.egg-info/**/*", format = "sdist" },
    { path = "plan.md", format = "sdist" },
    { path = "refdoc/**/*", format = "sdist" },
    { path = "scripts/**/*", format = "sdist" },
    { path = "tasks/**/*", format = "sdist" },
    { path = "tmp/**/*", format = "sdist" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
